--- a/PinboardLetter/Base.lproj/MainInterface.storyboard
+++ b/PinboardLetter/Base.lproj/MainInterface.storyboard
@@ -20,11 +20,41 @@
                     <view key="view" opaque="NO" contentMode="scaleToFill" id="wbc-yd-nQP">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DXb-eS-3WC">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="37"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pinboardの#letterに投稿しますよ(　´･‿･｀)" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bY7-a6-Zhs">
+                                        <rect key="frame" x="8" y="20" width="359" height="17"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="bY7-a6-Zhs" secondAttribute="trailing" constant="8" id="9to-PE-v8r"/>
+                                    <constraint firstAttribute="bottom" secondItem="bY7-a6-Zhs" secondAttribute="bottom" id="CJW-JA-zMv"/>
+                                    <constraint firstItem="bY7-a6-Zhs" firstAttribute="leading" secondItem="DXb-eS-3WC" secondAttribute="leading" constant="8" id="P5C-QF-yH1"/>
+                                    <constraint firstItem="bY7-a6-Zhs" firstAttribute="top" secondItem="DXb-eS-3WC" secondAttribute="top" constant="20" id="X4S-ik-2RD"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="DXb-eS-3WC" firstAttribute="leading" secondItem="wbc-yd-nQP" secondAttribute="leading" id="X5v-A5-i95"/>
+                            <constraint firstAttribute="trailing" secondItem="DXb-eS-3WC" secondAttribute="trailing" id="a9Q-MH-TxU"/>
+                            <constraint firstItem="DXb-eS-3WC" firstAttribute="top" secondItem="wbc-yd-nQP" secondAttribute="top" id="dAj-oN-1DI"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="statusLabel" destination="bY7-a6-Zhs" id="SbO-30-fSC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CEy-Cv-SGf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="140" y="138.98050974512745"/>
         </scene>
     </scenes>
 </document>
